# Sig-CIP

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  siglip_sonar_alignment.py  test.ipynb
.cursor/: mcp_settings.json
docs/: CURSOR_SETUP.md  HUGGINGFACE_GUIDE.md  RAG_GUIDE.md
examples/: advanced_features.py  basic_experiment.py  huggingface_integration.py  interactive_mode.py  rag_examples.py  software_development.py
src/sciagent/: __init__.py  __main__.py  api.py  cli.py
src/sciagent/advanced/: __init__.py  bayesian_design.py  mcts.py  thompson_sampling.py
src/sciagent/agents/: __init__.py  base.py  coding_agent.py  data_agent.py  overseer_agent.py  rag_agent.py  science_agent.py
src/sciagent/coordinator/: __init__.py  coordinator.py
src/sciagent/execution/: __init__.py  executor.py
src/sciagent/integrations/: __init__.py
src/sciagent/integrations/huggingface/: __init__.py  datasets.py  models.py
src/sciagent/mcp/: __init__.py  client.py
src/sciagent/project/: knowledge_graph.py
src/sciagent/rag/: __init__.py  graph_rag.py  pipeline.py
src/sciagent/utils/: __init__.py  config.py  logging.py  models.py
tests/unit/: test_config.py
